--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="btn_update">Изменить</string>
     <string name="btn_delete">Удалить</string>
     <string name="btn_exit">Назад</string>
+    <string name="delete_picture">Удалить картинку</string>
 </resources>
