--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="btn_delete">Удалить</string>
     <string name="btn_exit">Назад</string>
     <string name="delete_picture">Удалить картинку</string>
+    <string-array name="fieldsNameSearch">
+        <item>ID</item>
+        <item>Марка</item>
+        <item>Модель</item>
+        <item>Год производства</item>
+    </string-array>
     <string-array name="fieldsName">
         <item></item>
         <item>ID</item>
